feat: eslint, prettier
- eslint 적용
- prettier 적용
- 해당 사항에 맞게 문법 수정

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "_comment10": "react analize 실행",
     "docs": "jsdoc -c jsdoc.config.json"
   },
   "eslintConfig": {
@@ -43,6 +42,16 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-functional": "^4.2.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
     "docdash": "^2.0.1",
     "jsdoc": "^4.0.0"
   }
