--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#my custom
+docs
+
 # Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,react,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains+all,visualstudiocode,react,node
 
